[project]
name = "scenepresolv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "isofit>=3.7.5",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "spectral>=0.24",
    "torch>=2.11.0",
]
[tool.setuptools]
packages = ["scenepresolv"]
